# stm32-usart-uart-dma-rx-tx

./: .clang-format  .gitignore  .gitmodules  LICENSE  README.md  basic_types.h  status.h
.github/workflows/: release.yml
buffers/: RingBuffInterface.h  bufNamespace.h  buftype.h
buffers/dbuf/: DynamicQueue.h  DynamicRingBase.h  InfinityContainer.cpp  InfinityContainer.h  PoolContainer.h  RingBuffer.h
buffers/sbuf/: RingBuffer.h  SeqBuffer.h  StaticBufferCollection.h  StaticQueue.h  StaticRingBase.h
buffers/span/: Span.h
docs/: dma_circular_mode_template.xml  dma_event.xml  requirements.txt
drivers/: copy.bat
drivers/STM32F2xx_HAL_Driver/Src/: stm32f2xx_hal_adc.c
drivers/STM32G0xx_HAL_Driver/Inc/: stm32g0xx_ll_bus.h  stm32g0xx_ll_dma.h  stm32g0xx_ll_dmamux.h  stm32g0xx_ll_gpio.h  stm32g0xx_ll_pwr.h  stm32g0xx_ll_rcc.h  stm32g0xx_ll_system.h  stm32g0xx_ll_usart.h  stm32g0xx_ll_utils.h
drivers/STM32G0xx_HAL_Driver/Src/: stm32g0xx_ll_dma.c  stm32g0xx_ll_gpio.c  stm32g0xx_ll_utils.c
drivers/STM32L0xx_HAL_Driver/Src/: stm32l0xx_hal_adc.c
drivers/STM32L5xx_HAL_Driver/Inc/: stm32l5xx_ll_pwr.h  stm32l5xx_ll_system.h
drivers/STM32L5xx_HAL_Driver/Src/: stm32l5xx_ll_utils.c
drivers/STM32WBxx_HAL_Driver/Src/: stm32wbxx_hal_cryp.c  stm32wbxx_ll_rcc.c
io/: io.h
middlewares/FreeRTOS/Source/: st_readme.txt
projects/: .project  README.md
projects/idle_line_irq/: .project
projects/idle_line_irq/Src/: main.c  stm32f4xx_it.c
projects/idle_line_irq_F1/: .cproject  .mxproject  .project  STM32F103C8_FLASH.ld  idle_line_irq_F1.elf.launch
projects/idle_line_irq_F1/Inc/: main.h  stm32_assert.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
projects/idle_line_irq_F1/Src/: main.c  stm32f1xx_it.c
projects/idle_line_irq_F4/: .cproject  .project  USART DMA RX IDLE LINE IRQ.elf.launch
projects/idle_line_irq_F4/Src/: main.c
projects/idle_line_irq_G0/: .cproject  .project  idle_line_irq_G0.elf.launch
projects/idle_line_irq_G0/Src/: main.c
projects/idle_line_irq_L4/: .project  STM32L432KC_FLASH.ld
projects/idle_line_irq_L4/Src/: main.c
projects/idle_line_irq_ringbuff_G0/: .cproject  .mxproject  .project  g0_usart2_startup.elf.launch
projects/idle_line_irq_ringbuff_G0/Src/: main.c
projects/idle_line_irq_rtos/: .cproject  .project
projects/idle_line_irq_rtos/Inc/: main.h  stm32_assert.h
projects/idle_line_irq_rtos/Src/: main.c  stm32f4xx_it.c
projects/idle_line_irq_rtos_F4/: .cproject  .mxproject  .project  USART DMA RX IDLE LINE IRQ RTOS.elf.launch
projects/idle_line_irq_rtos_F4/Src/: main.c
projects/idle_line_irq_rtos_G4/: .cproject  .project  STM32G474RETX_RAM.ld  USART_DMA_RX_IDLE_LINE_IRQ_RTOS_G4.elf.launch  g474_usart_rx_dma.ioc
projects/idle_line_irq_rtos_G4/Src/: main.c  stm32g4xx_it.c
projects/idle_line_irq_rtos_L4/: .cproject  .mxproject  .project  idle_line_irq_rtos_L4.elf.launch
projects/idle_line_irq_rtos_L4/Inc/: FreeRTOSConfig.h  stm32l4xx_hal_conf.h
projects/idle_line_irq_rtos_L4/Src/: main.c  stm32l4xx_it.c
projects/idle_line_irq_rtos_L4_multi_instance/: .project  USART_DMA_RX_IDLE_LINE_IRQ_RTOS_L4_MULTI_INSTANCE.elf.launch
projects/idle_line_irq_rtos_L4_multi_instance/Src/: main.c
projects/polling/: .cproject  .project  STM32F413ZH_FLASH.ld
projects/polling/Inc/: stm32f4xx_hal_conf.h
projects/polling_F4/: .cproject  .project
projects/polling_rtos/: .project  mx.scratch  polling_rtos.elf.launch
projects/polling_rtos_F4/: .cproject  .project  USART_DMA_RX_POLLING_RTOS_F4 Debug.launch  polling_rtos.elf.launch
projects/usart_rx_idle_line_irq_F1/: .cproject  .project  CMakeLists.txt
projects/usart_rx_idle_line_irq_F4/: .cproject  .project  CMakeLists.txt  USART_DMA_RX_IDLE_LINE_IRQ_F4 Debug.launch
projects/usart_rx_idle_line_irq_G0/: .cproject  .project  CMakeLists.txt  STM32G071RB_FLASH.ld
projects/usart_rx_idle_line_irq_L4/: .cproject  .project  CMakeLists.txt  USART_DMA_RX_IDLE_LINE_IRQ_L4 Debug.launch
projects/usart_rx_idle_line_irq_ringbuff_G0/: .cproject  .project  CMakeLists.txt
projects/usart_rx_idle_line_irq_ringbuff_G0/Src/: main.c
projects/usart_rx_idle_line_irq_ringbuff_tx_G0/: .cproject  .project  CMakeLists.txt  USART_DMA_RX_IDLE_LINE_IRQ_RINGBUFF_TX_G0 Debug.launch
projects/usart_rx_idle_line_irq_ringbuff_tx_H7/: .cproject  .project  CMakeLists.txt  STM32H743ZITX_FLASH.ld  STM32H743ZITX_RAM.ld  USART_DMA_RX_IDLE_LINE_IRQ_RINGBUFF_TX_H7 Debug.launch
projects/usart_rx_idle_line_irq_ringbuff_tx_U5/: .cproject  .project  usart_dma_rx_idle_line_irq_ringbuff_tx_U5.ioc
projects/usart_rx_idle_line_irq_ringbuff_tx_loopback_G4/: .cproject  .project  CMakeLists.txt  STM32G474RETX_FLASH.ld  USART_DMA_RX_IDLE_LINE_IRQ_RINGBUFF_TX_LOOPBACK_G4 Debug.launch
projects/usart_rx_idle_line_irq_ringbuff_tx_loopback_U5/: .project  CMakeLists.txt  STM32U575ZITXQ_RAM.ld  usart_dma_rx_idle_line_irq_ringbuff_tx_U5 Debug.launch  usart_dma_rx_idle_line_irq_ringbuff_tx_U5.ioc
projects/usart_rx_idle_line_irq_ringbuff_tx_loopback_U5/Inc/: stm32u5xx_it.h
projects/usart_rx_idle_line_irq_ringbuff_tx_loopback_U5/Src/: main.c
projects/usart_rx_idle_line_irq_rtos_F4/: .cproject  .project  CMakeLists.txt  USART_DMA_RX_IDLE_LINE_IRQ_RTOS_F4 Debug.launch
projects/usart_rx_idle_line_irq_rtos_G4/: .cproject  .project  CMakeLists.txt  STM32G474RETX_FLASH.ld
projects/usart_rx_idle_line_irq_rtos_G4/Inc/: stm32_assert.h
projects/usart_rx_idle_line_irq_rtos_G4/Src/: main.c
projects/usart_rx_idle_line_irq_rtos_L4/: .cproject  .project  CMakeLists.txt
projects/usart_rx_idle_line_irq_rtos_L4_multi_instance/: .cproject  .project  CMakeLists.txt  CMakePresets.json
projects/usart_rx_idle_line_irq_rtos_L4_multi_instance/Src/: main.c
projects/usart_rx_polling_F4/: .cproject  .project  CMakeLists.txt
projects/usart_rx_polling_rtos_F4/: .cproject  .project  CMakeLists.txt
projects/usart_tx_debug_rtos_F4/: .cproject  .project  CMakeLists.txt  USART_DMA_TX_DEBUG_RTOS_F4 Debug.launch
uart_engine/: RS485Engine.h  UartBase.cpp  UartBase.h  UartCallback.cpp  UartEngine.h  UartType.h  uart_regs.h  uart_settingstest.h
(+123 files in other folders)
